--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 .layout {
-    borde: 1px solid #B22222;
+    border: 1px solid #B22222;
     display: flex;
   
     justify-content: center;
@@ -7,35 +7,38 @@
 }
 
 .parent {
-    borde: 1px solid #B22222;
+    border: 1px solid #B22222;
     display: grid;
     width: 70%;
-    grid-template-columns: 380px 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 200px 600px;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     }
 
 .header {
-    borde: 1px solid #B22222;
+    border: 1px solid #B22222;
     heigh:200px;  
     display: flex;
     flex-direction: column;
     color: black; 
     align-items: flex-start;
     flex: wrap;
- /*   grid-column-start: 1;
+    grid-column-start: 1;
     grid-column-end: 3; 
-*/
+
 }
 
 .navigation {
-    float: right; 
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+
 }
 
 /*
 .naslovnica {
-    borde: 1px solid #B22222;
+    border: 1px solid #B22222;
     display: grid;
     grid-column-start: 1;
     grid-column-end: 3;
@@ -43,7 +46,7 @@
 */
 
 .naslov-dela {
-    borde: 3px solid blue;
+    border: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     align-self: flex-end;
@@ -52,7 +55,7 @@
 }
 
 .opis-dela {
-    borde: 3px solid blue;
+    border: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     align-self: flex-end;
@@ -62,7 +65,7 @@
 }
 
 .container-dela {
-    borde: 3px solid blue;
+    border: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     flex-direction: column;
@@ -71,7 +74,7 @@
 }
 
 h1 {
-    borde: 1px solid #B22222;
+    border: 1px solid #B22222;
     font-family: "Old Standard TT", serif;
     font-size: 2em;
     color: black; 
@@ -80,7 +83,7 @@ h1 {
 
 p {
  /*   margin-top: -90px;  za spreminjanje pozicije- visine */
-    borde: 1px solid #B22222;
+    border: 1px solid #B22222;
     justify-content: center;
     font-family: "Open Sans Condensed", sans-serif;
     font-size: 1.5em;
@@ -89,7 +92,7 @@ p {
 }
 
 img {
-    borde: 3px solid #B22222;
+    border: 3px solid #B22222;
     display: flex;
     max-widt:100%;
     max-heigh:100%;
@@ -99,6 +102,37 @@ img {
     float: right;
     position: relative;
 }
+
+a:link {
+    color: black;
+    background-color: transparent;
+    font-family: "Open Sans Condensed", sans-serif;
+    text-decoration: none;
+    font-size: 1.5em;
+    margin-right: 10px;
+}
+
+/*
+a:visited {
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  
+  
+  a:active {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+*/
+
 
 @media screen and (max-width: 1082px) {
     .parent {
