--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 .layout {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: flex;
   
     justify-content: center;
@@ -7,17 +7,17 @@
 }
 
 .parent {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: grid;
     width: 70%;
     grid-template-columns: 1fr;
-    grid-template-rows: 200px 600px;
+    grid-template-rows: auto 650px;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     }
 
 .header {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     heigh:200px;  
     display: flex;
     flex-direction: column;
@@ -25,7 +25,8 @@
     align-items: flex-start;
     flex: wrap;
     grid-column-start: 1;
-    grid-column-end: 3; 
+    grid-column-end: 3;
+    margin-bottom: 30px; 
 
 }
 
@@ -38,7 +39,7 @@
 
 /*
 .naslovnica {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: grid;
     grid-column-start: 1;
     grid-column-end: 3;
@@ -46,7 +47,7 @@
 */
 
 .naslov-dela {
-    border: 3px solid blue;
+    borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     align-self: flex-end;
@@ -55,17 +56,17 @@
 }
 
 .opis-dela {
-    border: 3px solid blue;
+    borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     align-self: flex-end;
-    margin-top: -5px;
+    margin-top: 0px;
     margin-bottom: 10px;
     font-size: 0.9em;
 }
 
 .container-dela {
-    border: 3px solid blue;
+    borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     flex-direction: column;
@@ -74,25 +75,36 @@
 }
 
 h1 {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     font-family: "Old Standard TT", serif;
     font-size: 2em;
     color: black; 
     margin: 10px 0 0 0;
 }
 
-p {
+.podnaslov {
  /*   margin-top: -90px;  za spreminjanje pozicije- visine */
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     justify-content: center;
     font-family: "Open Sans Condensed", sans-serif;
-    font-size: 1.5em;
+    font-size: 2em;
     color: black;
-    margin: 0 0 0 0;
+    margin: 0 0 60px 0;
+}
+
+p {
+    /*   margin-top: -90px;  za spreminjanje pozicije- visine */
+       borde: 1px solid #B22222;
+       justify-content: center;
+       font-family: "Open Sans Condensed", sans-serif;
+       font-size: 1.3em;
+       color: black;
+       margin: 0 0 0 0;
+       
 }
 
 img {
-    border: 3px solid #B22222;
+    borde: 3px solid #B22222;
     display: flex;
     max-widt:100%;
     max-heigh:100%;
@@ -108,8 +120,9 @@ a:link {
     background-color: transparent;
     font-family: "Open Sans Condensed", sans-serif;
     text-decoration: none;
-    font-size: 1.5em;
-    margin-right: 10px;
+    font-size: 1.4em;
+    margin-right: 20px;
+    margin-top: 30px;
 }
 
 /*
@@ -141,7 +154,22 @@ a:visited {
 
     h1 {
         font-size: 4em;
-   
     }
+
+    p {
+        font-size: 1.8em;
+    }
+
     #text {
         font-size: 3em;
+    }
+
+    a:link {
+            color: black;
+            background-color: transparent;
+            font-family: "Open Sans Condensed", sans-serif;
+            text-decoration: none;
+            font-size: 2em;
+            margin-right: 20px;
+            white-space: nowrap;
+        }
