--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,7 +11,7 @@
     display: grid;
     width: 70%;
     grid-template-columns: 1fr;
-    grid-template-rows: auto 650px;
+    grid-template-rows: auto auto;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     }
@@ -53,6 +53,7 @@
     align-self: flex-end;
     margin-top: 10px;
     font-size: 2em;
+    font-weight: 700;
 }
 
 .opis-dela {
@@ -85,11 +86,10 @@ h1 {
 .podnaslov {
  /*   margin-top: -90px;  za spreminjanje pozicije- visine */
     borde: 1px solid #B22222;
-    justify-content: center;
     font-family: "Open Sans Condensed", sans-serif;
     font-size: 2em;
     color: black;
-    margin: 0 0 60px 0;
+    margin: 0 0 0 0;
 }
 
 p {
@@ -108,7 +108,7 @@ img {
     display: flex;
     max-widt:100%;
     max-heigh:100%;
-    height: 450px;
+    height: 500px;
     width: auto;
     object-fit: cover;
     float: right;
@@ -152,16 +152,29 @@ a:visited {
         width: 90%;
     }
 
+    .header {
+        width: 100%;
+    }
+
     h1 {
-        font-size: 4em;
+        font-size: 5em;
     }
 
     p {
-        font-size: 1.8em;
+        font-size: 3em;
+    }
+
+    .naslov-dela {
+        font-size: 1.4em;
+        margin-top: 90px;
     }
 
     #text {
         font-size: 3em;
+    }
+    
+    .podnaslov {
+        font-size: 2.5em;
     }
 
     a:link {
@@ -169,7 +182,13 @@ a:visited {
             background-color: transparent;
             font-family: "Open Sans Condensed", sans-serif;
             text-decoration: none;
-            font-size: 2em;
+            font-size: 3em;
             margin-right: 20px;
             white-space: nowrap;
         }
+
+    img {
+        borde: 3px solid green;
+        width: 100%;
+        height: 100%;
+    }
