--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 .layout {
     borde: 1px solid #B22222;
     display: flex;
-  
+    margin-top: 20px;
     justify-content: center;
     
 }
@@ -33,7 +33,7 @@
 .navigation {
     display: flex;
     flex-direction: row;
-    margin-top: 30px;
+    margin-top: 50px;
 
 }
 
@@ -51,7 +51,7 @@
     display: flex;
     flex-flow: wrap;
     align-self: flex-end;
-    margin-top: 10px;
+    margin-top: 0px;
     font-size: 2em;
     font-weight: 700;
 }
@@ -166,7 +166,7 @@ a:visited {
 
     .naslov-dela {
         font-size: 1.4em;
-        margin-top: 90px;
+        margin-top: 70px;
     }
 
     #text {
@@ -175,6 +175,7 @@ a:visited {
     
     .podnaslov {
         font-size: 2.5em;
+        margin-bottom: 50px;
     }
 
     a:link {
