--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -81,6 +81,7 @@ h1 {
     font-size: 2em;
     color: black; 
     margin: 10px 0 0 0;
+    white-space: nowrap;
 }
 
 .podnaslov {
@@ -154,10 +155,12 @@ a:visited {
 
     .header {
         width: 100%;
+
     }
 
     h1 {
-        font-size: 5em;
+        font-size: 6.7em;
+        justify-content: center;
     }
 
     p {
@@ -174,7 +177,7 @@ a:visited {
     }
     
     .podnaslov {
-        font-size: 2.5em;
+        font-size: 3em;
         margin-bottom: 50px;
     }
 
