--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 .layout {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: flex;
     margin-top: 20px;
     justify-content: center;
@@ -7,7 +7,7 @@
 }
 
 .parent {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: grid;
     width: 70%;
     grid-template-columns: auto auto;
@@ -17,7 +17,7 @@
     }
 
 .header {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     heigh:200px;  
     display: flex;
     flex-direction: column;
@@ -31,7 +31,7 @@
 }
 
 .navigation {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: flex;
     flex-direction: column;
     margin-top: px;
@@ -40,7 +40,7 @@
 
 /*
 .naslovnica {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: grid;
     grid-column-start: 1;
     grid-column-end: 3;
@@ -48,7 +48,7 @@
 */
 
 .naslov-dela {
-    border: 3px solid blue;
+    borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     align-self: flex-end;
@@ -58,7 +58,7 @@
 }
 
 .opis-dela {
-    border: 3px solid blue;
+    borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     align-self: flex-end;
@@ -68,7 +68,7 @@
 }
 
 .container-dela {
-    border: 3px solid blue;
+    borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     flex-direction: column;
@@ -78,7 +78,7 @@
 }
 
 h1 {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     font-family: "Old Standard TT", serif;
     font-size: 2em;
     color: black; 
@@ -88,7 +88,7 @@ h1 {
 
 .podnaslov {
  /*   margin-top: -90px;  za spreminjanje pozicije- visine */
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     font-family: "Open Sans Condensed", sans-serif;
     font-size: 1.5em;
     color: black;
@@ -97,7 +97,7 @@ h1 {
 
 p {
     /*   margin-top: -90px;  za spreminjanje pozicije- visine */
-       border: 1px solid #B22222;
+       borde: 1px solid #B22222;
        justify-content: center;
        font-family: "Open Sans Condensed", sans-serif;
        font-size: 1.3em;
@@ -107,7 +107,7 @@ p {
 }
 
 img {
-    border: 3px solid #B22222;
+    borde: 3px solid #B22222;
     display: flex;
     max-widt:100%;
     max-heigh:100%;
@@ -189,7 +189,7 @@ a:visited {
     }
 
     a:link {
-            border: 1px solid #B22222;
+            borde: 1px solid #B22222;
             color: black;
             background-color: transparent;
             font-family: "Open Sans Condensed", sans-serif;
@@ -200,7 +200,7 @@ a:visited {
         }
 
     img {
-        border: 3px solid green;
+        borde: 3px solid green;
         width: 100%;
         height: 100%;
     }
