--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -113,7 +113,7 @@ h1 {
     align-self: flex-start;
     margin-top: 10px;
     font-size: 1.5em;
-    font-weight: 700;
+    font-weigh: 700;
 }
 
 p {
