--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -134,7 +134,6 @@ h1 {
     align-self: flex-start;
     margin-top: 10px;
     font-size: 1.5em;
-    font-weigh: 700;
 }
 
 p {
@@ -263,12 +262,8 @@ a:visited {
     }
 
     .contact {
-        borde: 3px solid blue;
-        font-family: "Open Sans Condensed", sans-serif;
-        display: flex;
-        flex-flow: wrap;
         margin-top: 10px;
-        font-size: 3em;
+        font-size: 90px;
     }
 
     a:link {
