--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,9 @@
 .layout {
     borde: 1px solid #B22222;
     display: flex;
-    margin-top: 20px;
+    margin: 0;
     justify-content: center;
-    
+
 }
 
 .parent {
@@ -14,7 +14,24 @@
     grid-template-rows: auto auto;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    margin: 0;
+    
     }
+
+.headbar {
+        position: fixed;
+        borde: 1px solid cyan;
+        display: flex;
+        flex-direction: column;
+        color: black; 
+        align-items: flex-start;
+        flex: wrap;
+        width: 100%;
+        background-color: white;
+        top: 0;
+
+}
+    
 
 .header {
     borde: 1px solid #B22222;
@@ -27,6 +44,7 @@
     grid-column-start: 1;
     grid-column-end: 3;
     margin-bottom: 30px; 
+    margin-top: 0;
 
 }
 
@@ -34,7 +52,7 @@
     borde: 1px solid #B22222;
     display: flex;
     flex-direction: column;
-    margin-top: px;
+    margin: 0;
     grid-row-start: 2;
     grid-row-end: 5;
 }
@@ -74,6 +92,7 @@
     flex-flow: nowrap;
     flex-direction: column;
     align-self: flex-end;
+    margin: 0;
 }
 
 .container-dela-prvi {
@@ -110,11 +129,14 @@
 
 h1 {
     borde: 1px solid #B22222;
-    font-family: "Old Standard TT", serif;
-    font-size: 2em;
+    font-family: "Source Sans Pro", serif;
+    font-size: 2.3em;
     color: black; 
-    margin: 10px 0 0 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 45px;
     white-space: nowrap;
+    padding: 0;
 }
 
 .podnaslov {
@@ -123,7 +145,7 @@ h1 {
     font-family: "Open Sans Condensed", sans-serif;
     font-size: 1.5em;
     color: black;
-    margin: 0 0 0 0;
+    margin: 0;
 }
 
 .contact {
@@ -143,7 +165,7 @@ p {
        font-family: "Open Sans Condensed", sans-serif;
        font-size: 1.3em;
        color: black;
-       margin: 0 0 0 0;
+       margin: 0;
        
 }
 
@@ -218,6 +240,8 @@ a:visited {
         font-size: 6em;
         justify-content: center;
         margin-bottom: 20px;
+        margin: 0;
+
     }
 
     p {
