--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 .layout {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: flex;
     margin: 0;
     justify-content: center;
@@ -7,7 +7,7 @@
 }
 
 .parent {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: grid;
     width: 80%;
     grid-template-columns: auto auto;
@@ -16,11 +16,16 @@
     grid-row-gap: 0px;
     margin: 0;
     
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 1s; /* Firefox < 16 */
+     -ms-animation: fadein 1s; /* Internet Explorer */
+      -o-animation: fadein 1s; /* Opera < 12.1 */
+         animation: fadein 1s;
     }
 
 .headbar {
         position: fixed;
-        border: 1px solid cyan;
+        borde: 1px solid cyan;
         display: flex;
         flex-direction: column;
         color: black; 
@@ -31,11 +36,13 @@
         top: 0;
         z-index: 99;
 
+        animation: 0.5s ease-out 0s 1 slideInFromLeft;
+
 }
     
 
 .header {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     heigh:200px;  
     display: flex;
     flex-direction: column;
@@ -50,7 +57,7 @@
 }
 
 .navigation {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -60,7 +67,7 @@
 
 /*
 .naslovnica {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     display: grid;
     grid-column-start: 1;
     grid-column-end: 3;
@@ -68,7 +75,7 @@
 */
 
 .naslov-dela {
-    border: 3px solid blue;
+    borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     align-self: flex-end;
@@ -78,7 +85,7 @@
 }
 
 .opis-dela {
-    border: 3px solid blue;
+    borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     align-self: flex-end;
@@ -88,7 +95,7 @@
 }
 
 .container-del {
-    border: 2px solid green;
+    borde: 2px solid green;
     display: flex;
     flex-flow: nowrap;
     flex-direction: column;
@@ -97,7 +104,7 @@
 }
 
 .container-dela-prvi {
-    border: 5px solid orange;
+    borde: 5px solid orange;
     display: flex;
     flex-flow: nowrap;
     flex-direction: column;
@@ -108,7 +115,7 @@
 }
 
 .container-dela-naslednji {
-    border: 3px solid yellow;
+    borde: 3px solid yellow;
     display: flex;
     flex-flow: nowrap;
     flex-direction: column;
@@ -119,7 +126,7 @@
 }
 
 .container-contact {
-    border: 3px solid blue;
+    borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
     flex-direction: column;
@@ -129,7 +136,7 @@
 }
 
 h1 {
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     font-family: "Source Sans Pro", serif;
     font-size: 2.3em;
     color: black; 
@@ -142,7 +149,7 @@ h1 {
 
 .podnaslov {
  /*   margin-top: -90px;  za spreminjanje pozicije- visine */
-    border: 1px solid #B22222;
+    borde: 1px solid #B22222;
     font-family: "Open Sans Condensed", sans-serif;
     font-size: 1.5em;
     color: black;
@@ -150,7 +157,7 @@ h1 {
 }
 
 .contact {
-    border: 3px solid blue;
+    borde: 3px solid blue;
     font-family: "Open Sans Condensed", sans-serif;
     display: flex;
     flex-flow: wrap;
@@ -161,7 +168,7 @@ h1 {
 
 p {
     /*   margin-top: -90px;  za spreminjanje pozicije- visine */
-       border: 1px solid #B22222;
+       borde: 1px solid #B22222;
        justify-content: center;
        font-family: "Open Sans Condensed", sans-serif;
        font-size: 1.3em;
@@ -171,7 +178,7 @@ p {
 }
 
 img {
-    border: 3px solid #B22222;
+    borde: 3px solid #B22222;
     display: flex;
     max-width:100%;
     max-heigh:100%;
@@ -183,7 +190,7 @@ img {
 }
 
 img.landscape {
-    border: 3px solid #B22222;
+    borde: 3px solid #B22222;
     display: flex;
     max-width:100%;
     max-heigh:100%;
@@ -226,6 +233,45 @@ a:visited {
   }
 */
 
+@keyframes slideInFromLeft {
+    0% {
+      transform: translateY(-100%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+
+  
+@keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
 
 @media screen and (max-width: 1082px) {
     .parent {
@@ -250,7 +296,7 @@ a:visited {
     }
 
     .navigation {
-        border: 3px solid #B22222;
+        borde: 3px solid #B22222;
         display: flex;
         flex-direction: column;
         margin-top: px;
@@ -293,7 +339,7 @@ a:visited {
     }
 
     a:link {
-            border: 1px solid #B22222;
+            borde: 1px solid #B22222;
             color: black;
             background-color: transparent;
             font-family: "Open Sans Condensed", sans-serif;
@@ -304,14 +350,15 @@ a:visited {
         }
 
     img {
-        border: 3px solid green;
+        borde: 3px solid green;
         width: 100%;
         height: 100%;
     }
 
     img.landscape {
-        border: 3px solid green;
+        borde: 3px solid green;
         width: 100%;
         max-height: 100%;
     }
     
+
