--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,8 +2,8 @@
     borde: 1px solid #B22222;
     display: flex;
     margin: 0;
+    padding: 0;
     justify-content: center;
-
 }
 
 .parent {
@@ -32,7 +32,7 @@
         align-items: flex-start;
         flex: wrap;
         width: 100%;
-        background-color: white;
+        background-color: #f4f4f4;
         top: 0;
         z-index: 99;
 
@@ -284,10 +284,10 @@ to   { opacity: 1; }
     }
 
     h1 {
-        font-size: 6em;
-        justify-content: center;
+        font-size: 5em;
+        justify-content: flex-start;
         margin-bottom: 20px;
-        margin: 0;
+        margin-left: 30px;
 
     }
 
