--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,7 +32,7 @@
         align-items: flex-start;
         flex: wrap;
         width: 100%;
-        background-color: #f4f4f4;
+        background-color: #FFFFFF;
         top: 0;
         z-index: 99;
 
@@ -140,8 +140,8 @@ h1 {
     font-family: "Source Sans Pro", serif;
     font-size: 2.3em;
     color: black; 
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     margin-left: 45px;
     white-space: nowrap;
     padding: 0;
