--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -137,7 +137,7 @@
 
 h1 {
     borde: 1px solid #B22222;
-    font-family: "Source Sans Pro", serif;
+    font-family: "Ubuntu", serif;
     font-size: 2.3em;
     color: black; 
     margin-top: 15px;
@@ -145,6 +145,7 @@ h1 {
     margin-left: 45px;
     white-space: nowrap;
     padding: 0;
+	font-weight: 700;
 }
 
 .podnaslov {
@@ -287,7 +288,7 @@ to   { opacity: 1; }
         font-size: 5em;
         justify-content: flex-start;
         margin-bottom: 20px;
-        margin-left: 30px;
+        margin-left: 50px;
 
     }
 
