--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -202,6 +202,12 @@ img.landscape {
     position: relative;
 }
 
+
+/* FADEANJE */
+
+
+/* LINKI */
+
 a:link {
     color: black;
     background-color: transparent;
