--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,14 +7,12 @@
 }
 
 .parent {
-    borde: 1px solid #B22222;
-    display: grid;
+    borde: 8px solid rgb(178, 34, 123);
+    display: flex;
     width: 80%;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+flex-direction: column;
     margin: 0;
+    justify-content: center;
     
     -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadein 1s; /* Firefox < 16 */
@@ -49,20 +47,19 @@
     color: black; 
     align-items: flex-start;
     flex: wrap;
-    grid-column-start: 1;
-    grid-column-end: 3;
+ 
     margin-bottom: 30px; 
     margin-top: 0;
 
 }
 
 .navigation {
-    borde: 1px solid #B22222;
+    borde: 1px solid cyan;
     display: flex;
-    flex-direction: column;
-    margin: 0;
-    grid-row-start: 2;
-    grid-row-end: 5;
+    flex-direction: row;
+    margin-top: 80px;
+    padding-left: 30px;
+
 }
 
 /*
@@ -98,9 +95,20 @@
     borde: 2px solid green;
     display: flex;
     flex-flow: nowrap;
-    flex-direction: column;
-    align-self: flex-end;
+    flex-direction: row;
+    align-content: flex-end;
+    justify-content: center;
     margin: 0;
+}
+
+.container-del-prvi {
+    borde: 2px solid green;
+    display: flex;
+    flex-flow: nowrap;
+    flex-direction: row;
+    align-content: flex-end;
+    justify-content: center;
+    margin-top: 30px;
 }
 
 .container-dela-prvi {
@@ -108,7 +116,9 @@
     display: flex;
     flex-flow: nowrap;
     flex-direction: column;
-    margin-top: px;
+    margin-top: 70px;
+    padding-left: 30px;
+    padding-right: 30px;
  /*   grid-column-start: 1;
     grid-column-end: 3; 
 */
@@ -148,6 +158,10 @@ h1 {
 	font-weight: 700;
 }
 
+.h2 {
+
+}
+
 .podnaslov {
  /*   margin-top: -90px;  za spreminjanje pozicije- visine */
     borde: 1px solid #B22222;
@@ -183,7 +197,7 @@ img {
     display: flex;
     max-width:100%;
     max-heigh:100%;
-    height: 500px;
+    height: 400px;
     width: auto;
     object-fit: cover;
     float: right;
@@ -195,7 +209,7 @@ img.landscape {
     display: flex;
     max-width:100%;
     max-heigh:100%;
-    height: 500px;
+    height: 400px;
     width: auto;
     object-fit: cover;
     float: right;
@@ -204,7 +218,6 @@ img.landscape {
 
 
 /* FADEANJE */
-
 
 /* LINKI */
 
@@ -306,7 +319,7 @@ to   { opacity: 1; }
         borde: 3px solid #B22222;
         display: flex;
         flex-direction: column;
-        margin-top: px;
+        margin-top: 120px;
         font-size: 1.5em;
         grid-column-start: 1;
         grid-column-end: 3;
@@ -321,10 +334,23 @@ to   { opacity: 1; }
         display: flex;
         flex: nowrap;
         flex-direction: column;
-        grid-row-start: 5;
-        grid-row-end: 8; 
+ 
         align-self: flex-end;
     }
+
+    .container-del-prvi {
+        display: flex;
+        flex: nowrap;
+        flex-direction: column;
+ 
+        align-self: flex-end;
+    }
+
+
+    .container-dela-prvi {
+        padding:
+    }
+
     .container-contact {
         grid-column-start: 1;
         grid-column-end: 3; 
@@ -368,4 +394,8 @@ to   { opacity: 1; }
         max-height: 100%;
     }
     
-
+    @media screen and (max-width: 790px) {
+    .parent {
+         width: 100%;
+        }  
+    }
