--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -58,7 +58,8 @@ flex-direction: column;
     display: flex;
     flex-direction: row;
     margin-top: 80px;
-    padding-left: 30px;
+    padding-left: 0px;
+   
 
 }
 
@@ -140,6 +141,7 @@ flex-direction: column;
     display: flex;
     flex-flow: wrap;
     flex-direction: column;
+    margin-top: 100px;
  /*   grid-column-start: 1;
     grid-column-end: 3; 
 */
@@ -242,7 +244,7 @@ a:visited {
   a:hover {
     color: red;
     background-color: transparent;
-    text-decoration: underline;
+    text-decoratio: none;
   }
 /*   
   
