--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,7 +76,7 @@ flex-direction: column;
     borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
-    align-self: flex-end;
+    align-self: flex-start;
     margin-top: 0px;
     font-size: 1.4em;
     font-weight: 700;
@@ -86,7 +86,7 @@ flex-direction: column;
     borde: 3px solid blue;
     display: flex;
     flex-flow: wrap;
-    align-self: flex-end;
+    align-self: flex-start;
     margin-top: 0px;
     margin-bottom: 10px;
     font-size: 1em;
@@ -97,8 +97,8 @@ flex-direction: column;
     display: flex;
     flex-flow: nowrap;
     flex-direction: row;
-    align-content: flex-end;
-    justify-content: center;
+    align-conten: flex-end;
+    justify-conten: center;
     margin: 0;
 }
 
@@ -107,19 +107,35 @@ flex-direction: column;
     display: flex;
     flex-flow: nowrap;
     flex-direction: row;
-    align-content: flex-end;
-    justify-content: center;
+    align-conten: flex-end;
+    justify-conten: flex-start;
     margin-top: 30px;
 }
 
-.container-dela-prvi {
+.container-dela-levi {
     borde: 5px solid orange;
     display: flex;
     flex-flow: nowrap;
     flex-direction: column;
     margin-top: 70px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 0px;
+    padding-right: 0px;
+    justify-conten: flex-start;
+ /*   grid-column-start: 1;
+    grid-column-end: 3; 
+*/
+}
+
+.container-dela-desni {
+    borde: 5px solid orange;
+    display: flex;
+    flex-flow: nowrap;
+    flex-direction: column;
+    margin-top: 70px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: auto;
+    margin-right: 0;
  /*   grid-column-start: 1;
     grid-column-end: 3; 
 */
@@ -349,7 +365,7 @@ to   { opacity: 1; }
     }
 
 
-    .container-dela-prvi {
+    .container-dela-levi {
         padding:
     }
 
