--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -409,7 +409,7 @@ to   { opacity: 1; }
     img.landscape {
         borde: 3px solid green;
         width: 100%;
-        max-height: 100%;
+        height: 100%;
     }
     
     @media screen and (max-width: 790px) {
