--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -348,6 +348,10 @@ to   { opacity: 1; }
         margin-top: 70px;
     }
 
+    .opis-dela {
+        font-size: 1.3em;
+    }
+
     .container-del {
         display: flex;
         flex: nowrap;
