--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -166,7 +166,7 @@ flex-direction: column;
 
 h1 {
     borde: 1px solid #B22222;
-    font-family: "Ubuntu", sans-serif !important;
+    font-family: "Ubuntu"!important, sans-serif;
     font-size: 1.5em;
     color: black; 
     margin-top: 15px;
