--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -167,7 +167,7 @@ flex-direction: column;
 h1 {
     borde: 1px solid #B22222;
     font-family: "Ubuntu", sans-serif;
-    font-size: 1.5em;
+    font-size: 1.5em!important;
     color: black; 
     margin-top: 15px;
     margin-bottom: 15px;
