--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -122,6 +122,7 @@ flex-direction: column;
     padding-left: 0px;
     padding-right: 30px;
     justify-conten: flex-start;
+    float: left;
  /*   grid-column-start: 1;
     grid-column-end: 3; 
 */
