--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -219,7 +219,7 @@ img {
     height: 400px;
     width: auto;
     object-fit: cover;
-    float: left;
+    float: right;
     position: relative;
 }
 
@@ -231,7 +231,7 @@ img.landscape {
     height: 400px;
     width: auto;
     object-fit: cover;
-    float: left;
+    float: right;
     position: relative;
 }
 
