--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -137,7 +137,7 @@ flex-direction: column;
     padding-right: 0px;
     margin-left: auto;
     margin-right: 0;
-    float: right;
+    float: left;
  /*   grid-column-start: 1;
     grid-column-end: 3; 
 */
