--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -357,7 +357,7 @@ to   { opacity: 1; }
         display: flex;
         flex: nowrap;
         flex-direction: column;
- 
+        margin-top: 0;
         align-self: flex-end;
     }
 
