--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -231,7 +231,7 @@ img.landscape {
     height: 400px;
     width: auto;
     object-fit: cover;
-    float: right;
+    floa: right;
     position: relative;
 }
 
