--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -219,7 +219,7 @@ img {
     height: 400px;
     width: auto;
     object-fit: cover;
-    float: right;
+    floa: right;
     position: relative;
 }
 
