--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -366,7 +366,7 @@ to   { opacity: 1; }
         flex: nowrap;
         flex-direction: column;
  
-        align-self: flex-end;
+        align-sel: flex-end;
     }
 
 
