--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -357,7 +357,7 @@ to   { opacity: 1; }
         display: flex;
         flex: nowrap;
         flex-direction: column;
-        margin-top: 20;
+        margin-top: 0;
         align-sel: flex-end;
     }
 
@@ -371,13 +371,13 @@ to   { opacity: 1; }
 
 
     .container-dela-levi {
-        margin: 0;
+        margin-top: 20px;
         padding: 0;
     }
 
     .container-dela-desni {
         padding: 0;
-        margin: 0;
+        margin-top: 20px;
     }
 
     .container-contact {
