--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -339,6 +339,7 @@ to   { opacity: 1; }
         display: flex;
         flex-direction: column;
         margin-top: 160px;
+        margin-left: 20px;
         font-size: 1.5em;
         grid-column-start: 1;
         grid-column-end: 3;
