--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -401,6 +401,7 @@ to   { opacity: 1; }
     .contact {
         margin-top: 40px;
         font-size: 80px;
+        margin-left: 20px;
     }
 
     a:link {
