--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -244,7 +244,7 @@ a:link {
     background-color: transparent;
     font-family: "Open Sans Condensed", sans-serif;
     text-decoration: none;
-    font-size: 1.4em;
+    font-siz: 1.4em;
     margin-right: 15px;
     margin-top: 5px;
 }
