--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -58,8 +58,8 @@ flex-direction: column;
     display: flex;
     flex-direction: row;
     margin-top: 80px;
-    padding-left: 0px;  
-
+    padding-left: 0px;
+   
 }
 
 /*
@@ -78,7 +78,7 @@ flex-direction: column;
     flex-flow: wrap;
     align-self: flex-start;
     margin-top: 0px;
-    font-size: 0.7em;
+    font-size: 1.1em;
     font-weight: 700;
 }
 
@@ -89,7 +89,7 @@ flex-direction: column;
     align-self: flex-start;
     margin-top: 0px;
     margin-bottom: 10px;
-    font-size: 0.7em;
+    font-size: 1em;
 }
 
 .container-del {
@@ -187,6 +187,7 @@ h1 {
     font-size: 1.5em;
     color: black;
     margin: 0;
+    max-width: 100%;
 }
 
 .contact {
@@ -207,6 +208,7 @@ p {
        font-size: 1.3em;
        color: black;
        margin: 0;
+       max-width: 100%;
        
 }
 
@@ -345,13 +347,13 @@ to   { opacity: 1; }
     }
 
     .naslov-dela {
-        font-size: 0.5em;
+        font-size: 1.3em;
         margin-top: 70px;
         margin-left: 20px;
     }
 
     .opis-dela {
-        font-size: 0.4em;
+        font-size: 1.2em;
         margin-left: 20px;
     }
 
