--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1350,7 +1350,7 @@ input, select, textarea {
 			}
 
 			.poptrox-popup .caption {
-				display: none !important;
+				display:  !important;
 			}
 
 			.poptrox-popup .closer,
